# bioscript

./: .gitignore  .gitmodules  .repoverse.yaml  AGENTS.md  README.md  TODO.md  assay_compiled.py  assay_intermediate.py  assay_loader.py  assay_result_schema.json  bs  bump_version.sh  coverage.sh  fix-kestrel.md  jupyter.sh  lint.sh  runtime_capabilities.json  runtime_capabilities.py  test-rs.sh  test-vntyper.sh  test.sh  test_assay_compiled.py  test_assay_intermediate.py  test_assay_loader.py  test_docker.sh  test_runtime_capabilities.py
bioscripts/: apol1.py  (+4 more)
python/: pyproject.toml
python/bioscript/: __init__.py  bcftools.py  data.py  kestrel.py  pyfaidx.py  pysam.py  runtime.py  samtools.py
python/src/bioscript/: __init__.py  biovault.py  classifier.py  cli.py  counter.py  data.py  reader.py  testing.py  types.py  utils.py  writer.py
python/tests/: test_backend.py  test_backend_policy.py  test_biovault.py  test_parity.py  test_pyfaidx.py  test_pysam.py  test_reader_formats.py  test_tools.py
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/bioscript/: Cargo.toml
rust/bioscript-cli/: Cargo.toml
rust/bioscript-cli/src/: cli_bootstrap.rs  cli_commands.rs  commands.rs  main.rs  manifest.rs  manifest_runner.rs  package.rs  package_release.rs  paths.rs  report_analysis_runtime.rs  report_execution.rs  report_findings.rs  report_html.rs  report_html_analysis.rs  report_html_helpers.rs  report_html_observations.rs  report_html_pgx.rs  report_html_provenance.rs  report_html_sections.rs  report_matching.rs  report_observation_json.rs  report_observations.rs  report_options.rs  report_output.rs  report_review.rs
rust/bioscript-cli/tests/: apol1_real_files.rs  cli.rs
rust/bioscript-cli/tests/cli/: args.rs  manifests.rs  runtime.rs  subcommands.rs
rust/bioscript-cli/tests/fixtures/: lookup_details.py
rust/bioscript-core/: Cargo.toml
rust/bioscript-core/src/: error.rs  genotype.rs  lib.rs  observation.rs  report.rs  variant.rs
rust/bioscript-core/tests/: source_size.rs
rust/bioscript-ffi/: Cargo.toml
rust/bioscript-ffi/src/: c_api.rs  lib.rs  limits.rs  run_file.rs  types.rs  variant_yaml.rs
rust/bioscript-formats/: Cargo.toml
rust/bioscript-formats/src/: alignment.rs  genotype.rs  inspect.rs  lib.rs  liftover.rs  prepare.rs
rust/bioscript-formats/src/alignment/: bam_fastq.rs  bam_stream.rs  cram_stream.rs  readers.rs
rust/bioscript-formats/src/genotype/: alignment_bytes.rs  backends.rs  bam_backend.rs  bcf.rs  cache.rs  common.rs  cram_backend.rs  delimited.rs  io.rs  load.rs  loaders.rs  query.rs  types.rs  vcf.rs  vcf_tokens.rs
rust/bioscript-formats/src/inspect/: assembly_anchors.rs  heuristics.rs  io.rs  render.rs  sex.rs
rust/bioscript-formats/tests/: file_formats.rs  inspect.rs  prepare.rs
rust/bioscript-formats/tests/file_formats/: alignment.rs  basic.rs  bcf.rs  cram.rs  delimited.rs  vcf.rs  zip_and_fixtures.rs
rust/bioscript-formats/tests/fixtures/: ancestrydna_csv_sample.csv  ancestrydna_v2_sample.txt  carigenetics_ddna_concordance_sample.txt  carigenetics_gsgt_sample.txt  familytreedna_sample.csv  generate_fixtures.sh  genesforgood_sample.txt  mini.cram  mini.cram.crai  mini.fa  mini.fa.fai  mini_bad_ref.fa
rust/bioscript-libs/: Cargo.toml
rust/bioscript-libs/src/: errors.rs  lib.rs  module_registry.rs  tools.rs  value.rs
rust/bioscript-libs/src/bcftools/: mod.rs
rust/bioscript-libs/src/kestrel/: mod.rs  native.rs
rust/bioscript-libs/src/pyfaidx/: fasta.rs  mod.rs
rust/bioscript-libs/src/pysam/: aligned_segment.rs  alignment_file.rs  mod.rs
rust/bioscript-libs/src/samtools/: mod.rs
rust/bioscript-libs/src/vcf/: mod.rs  vntyper.rs  vntyper_motif.rs
rust/bioscript-libs/tests/: api.rs  kestrel_java_parity.rs  vntyper_facades.rs  vntyper_vcf.rs
rust/bioscript-python/: Cargo.toml
rust/bioscript-python/src/: lib.rs
rust/bioscript-reporting/: Cargo.toml
rust/bioscript-reporting/src/: analysis.rs  artifacts.rs  html.rs  lib.rs  manifest.rs  manifest_catalogue.rs  manifest_members.rs  manifest_provenance.rs  matching.rs  observation.rs  report_json.rs  rows.rs  runner.rs
rust/bioscript-reporting/src/html/: analysis.rs  helpers.rs  observations.rs  pgx.rs  provenance.rs  sections.rs
rust/bioscript-reporting/src/manifest/: provenance.rs
rust/bioscript-reporting/src/observation/: facets.rs  genotype_display.rs
rust/bioscript-runtime/: Cargo.toml
rust/bioscript-runtime/src/: lib.rs  runtime.rs
rust/bioscript-runtime/src/runtime/: args.rs  dispatch.rs  genotype_load.rs  host_io.rs  imports.rs  kestrel_native_methods.rs  lib_methods.rs  methods.rs  objects.rs  paths.rs  samtools_command_methods.rs  samtools_native_methods.rs  state.rs  timing.rs  tool_methods.rs  trace.rs  variants.rs  vcf_methods.rs
rust/bioscript-runtime/tests/: resources.rs  resources_coverage.rs  security.rs  vntyper_program.rs
rust/bioscript-schema/: Cargo.toml
rust/bioscript-schema/src/: lib.rs  remote_resource.rs  validator.rs  validator_alleles.rs  validator_alleles_findings.rs  validator_catalogue.rs  validator_findings.rs  validator_helpers.rs  validator_load.rs  validator_panel.rs  validator_parse.rs  validator_resources.rs  validator_roots.rs  validator_types.rs
rust/bioscript-schema/src/validator/: common.rs  panel.rs  spec.rs  variant.rs
rust/bioscript-schema/tests/: validate_variants.rs
rust/bioscript-wasm/: Cargo.toml
rust/bioscript-wasm/src/: index_api.rs  inspect_api.rs  js_reader.rs  lib.rs  lookup_api.rs  package_api.rs  report_api.rs  report_helpers.rs  report_input_inspection.rs  report_lookup.rs  report_render.rs  report_workspace.rs  variant_yaml.rs
rust/bioscript-wasm/src/report_api/: analysis_cache.rs
rust/bioscript-wasm/src/report_lookup/: alignment.rs
rust/bioscript-wasm/src/report_workspace/: analysis.rs
rust/bioscript/src/: genotype.rs  lib.rs  main.rs  prepare.rs  runtime.rs  validator.rs
rust/bioscript/tests/: apol1_real_files.rs  cli.rs  resources.rs  security.rs  validate_variants.rs  vcf_apol1.rs  zip_inputs.rs
rust/bioscript/tests/fixtures/: batch_lookup.py  path_escape.py
(+236 files in other folders)
