[workspace]
resolver = "2"
members = [
    "bioscript-cli",
    "bioscript-core",
    "bioscript-ffi",
    "bioscript-formats",
    "bioscript-libs",
    "bioscript-python",
    "bioscript-reporting",
    "bioscript-runtime",
    "bioscript-schema",
    "bioscript-wasm",
]

[profile.dev]
opt-level = 2

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[patch.crates-io]
lexical-util = { path = "vendor/lexical-util" }
htslib-rs = { path = "../vendor/rust/htslib-rs/crates/htslib-rs" }
noodles = { path = "../noodles/noodles" }
noodles-bam = { path = "../noodles/noodles-bam" }
noodles-bcf = { path = "../noodles/noodles-bcf" }
noodles-bed = { path = "../noodles/noodles-bed" }
noodles-bgzf = { path = "../noodles/noodles-bgzf" }
noodles-core = { path = "../noodles/noodles-core" }
noodles-cram = { path = "../noodles/noodles-cram" }
noodles-csi = { path = "../noodles/noodles-csi" }
noodles-fasta = { path = "../noodles/noodles-fasta" }
noodles-fastq = { path = "../noodles/noodles-fastq" }
noodles-refget = { path = "../noodles/noodles-refget" }
noodles-sam = { path = "../noodles/noodles-sam" }
noodles-tabix = { path = "../noodles/noodles-tabix" }
noodles-vcf = { path = "../noodles/noodles-vcf" }
