[package]
name = "bioscript-cli"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "bioscript"
path = "src/main.rs"

[dependencies]
bioscript-core = { path = "../bioscript-core" }
bioscript-formats = { path = "../bioscript-formats" }
bioscript-reporting = { path = "../bioscript-reporting" }
bioscript-runtime = { path = "../bioscript-runtime" }
bioscript-schema = { path = "../bioscript-schema" }
monty = { path = "../../monty/crates/monty" }
serde_json = { version = "1.0.133", features = ["preserve_order"] }
serde_yaml = "0.9.34"
sha2 = "0.10"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
