[package]
name = "bioscript-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
bioscript-formats = { path = "../bioscript-formats" }
bioscript-runtime = { path = "../bioscript-runtime" }
jni = "0.21"
monty = { path = "../../monty/crates/monty" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
