[package]
name = "bioscript-formats"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
bioscript-core = { path = "../bioscript-core" }
noodles = { version = "0.109.0", features = ["bgzf", "core", "cram", "csi", "fasta", "sam", "tabix", "vcf"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
