[package]
name = "bioscript-runtime"
version = "0.2.8"
edition = "2024"

[dependencies]
bioscript-core = { path = "../bioscript-core" }
bioscript-formats = { path = "../bioscript-formats" }
bioscript-libs = { path = "../bioscript-libs" }
getrandom = { version = "0.3", features = ["wasm_js"] }
monty = { path = "../../monty/crates/monty" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
