[package]
name = "bioscript-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bioscript-core = { path = "../bioscript-core" }
bioscript-formats = { path = "../bioscript-formats" }
bioscript-schema = { path = "../bioscript-schema" }
noodles = { version = "0.109.0", features = ["bgzf", "cram", "csi", "fasta", "tabix"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
