[package]
name = "bioscript-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bioscript-core = { path = "../bioscript-core" }
bioscript-formats = { path = "../bioscript-formats" }
bioscript-runtime = { path = "../bioscript-runtime" }
bioscript-schema = { path = "../bioscript-schema" }
getrandom = { version = "0.3", features = ["wasm_js"] }
monty = { path = "../../monty/crates/monty" }
noodles = { version = "0.110.0", features = ["bgzf", "cram", "csi", "fasta", "tabix"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
