[package]
name = "bioscript-wasm"
version = "0.2.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bioscript-core = { path = "../bioscript-core" }
bioscript-formats = { path = "../bioscript-formats" }
bioscript-reporting = { path = "../bioscript-reporting" }
bioscript-runtime = { path = "../bioscript-runtime" }
bioscript-schema = { path = "../bioscript-schema" }
getrandom = { version = "0.3", features = ["wasm_js"] }
monty = { path = "../../monty/crates/monty" }
noodles = { version = "0.110.0", features = ["bam", "bgzf", "core", "cram", "csi", "fasta", "sam", "tabix", "vcf"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
# `preserve_order` matches `bioscript-cli`'s feature set so the wasm-produced
# JSON dumps key fields in the same insertion order the CLI does. Without
# this, BTreeMap-backed alphabetical sorting moves `assay_id` after
# `analyses` in the raw `index.html` JSON dump and the byte-diff vs the CLI
# blows up.
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
