[package]
name = "bioscript"
version = "0.1.0"
edition = "2024"

[dependencies]
monty = { path = "../../monty/crates/monty" }
noodles = { version = "0.104.0", features = ["bgzf"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
rust-htslib = "0.51.0"
serde_yaml = "0.9.34"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
