[package]
name = "bioscript"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
jni = "0.21"
monty = { path = "../../monty/crates/monty" }
noodles = { version = "0.104.0", features = ["bgzf"] }
zip = { version = "2.2.0", default-features = false, features = ["deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"

[target.'cfg(not(any(target_os = "ios", target_os = "tvos")))'.dependencies]
rust-htslib = "0.51.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
